# homework-repo-tool

./: README.md  hw.py  pyproject.toml
src/homework_repo_tool/: cli.py
